<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_noun_exam_2937004"
            android:title="@string/menu_quiz" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_noun_scan_1647111"
            android:title="@string/menu_scan" />
        <item
            android:id="@+id/nav_check"
            android:icon="@drawable/ic_noun_check_3244673"
            android:title="@string/menu_checker"/>
        <item
            android:id="@+id/nav_play"
            android:icon="@drawable/ic_noun_crossword_puzzle_1176719"
            android:title="@string/menu_play" />
    </group>
    <item android:title="@string/header">
        <menu>
            <item
                android:id="@+id/nav_lesson"
                android:icon="@drawable/ic_noun_lesson_269257"
                android:title="@string/menu_lessons"/>
            <item
                android:id="@+id/nav_application"
                android:icon="@drawable/ic_noun_application_2736824"
                android:title="Apply" />
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_noun_email_2271438"
                android:title="Email developer"/>
        </menu>
    </item>
</menu>
